# vendor_hihope

./: OAT.xml  README.en.md  README.md
nearlink_dk_3863/: config.json
nearlink_dk_3863_xts/: config.json
nearlink_dk_3863_xts_minimal/: BUILD.gn  README.md  apply_patches.py  config.json  config_patch.py
nearlink_dk_3863_xts_minimal/patches/: 0001-minimal_3863_sdk_build.patch
nearlink_dk_3863_xts_minimal/wraps/: BUILD.gn  at_custom_cmd.c  stub_impl.c
rk3568/: config.json
rk3568/hals/audio/: product.gni
rk3568/hdf_config/khdf/: Makefile  hdf.hcs
rk3568/hdf_config/khdf/device_info/: device_info.hcs
rk3568/hdf_config/khdf/hdf_test/: Makefile
rk3568/hdf_config/khdf/input/: input_config.hcs
rk3568/hdf_config/khdf/platform/: pwm_config.hcs
rk3568/hdf_config/uhdf/: device_info.hcs
