# Copyright (c) 2026 HiHope Open Source Organization.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("product") {
    sources = [
        "stub_impl.c",
        "at_custom_cmd.c",
    ]

    include_dirs = [
        "./",
        "//device/soc/hisilicon/ws63v100/sdk/include/middleware/utils",
        "//device/soc/hisilicon/ws63v100/sdk/middleware/chips/ws63/dfx/include",
        "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include",
        "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/debug",
    ]
}
